Resolve some compiler warnings